--- a/RECIPEBOOK/NEWRECIPE.resx
+++ b/RECIPEBOOK/NEWRECIPE.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Все данные необходимо указывать как при редактировании рецепта:
+1) Название писать без символов препинания
+2) Категории писать через запятую
+3) Ингридиенты в формате - название(вес в граммах) через запятую
+4) Оценку, калориность, все времена задать любым неотрицательным числом
+5) Комментарий писать в виде текста, как и описание шагов
+6)Изображения необходимо загружать самостоятельно в папку с рецептом</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
